--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,5 +1,5 @@
-phone: "+61 0417 123 XXX"
+phone: "+61 456991800"
 fax: ""
-email: "example@example.com"
-address: "Clem Jones Promenade, South Brisbane QLD 4101"
-map_link: "https://goo.gl/maps/c4WAN7fiRycaH1Gh7"
+email: "info@thehyperlabs.com"
+address: "Krucza 16 / 22, 00-526 Warsaw, Poland"
+map_link: "https://maps.app.goo.gl/UUiBZ2V4wXHEmMi2A"
