--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ open_graph:
 
 darkmode:
   enable_dark_mode: true
-  show_dark_mode_toggle_in_header: true
+  show_dark_mode_toggle_in_header: false
   show_dark_mode_toggle_in_bottom: false
   show_dark_mode_toggle_in_mobile_menu: false
 
