--- a/_config.yml
+++ b/_config.yml
@@ -126,14 +126,14 @@ fonts:
 
 logo:
   logo_text: "The Hyperlabs"
-  logo_image: assets/images/logo/logo.svg
-  logo_image_mobile: assets/images/logo/logo.svg
-  logo_image_invert: assets/images/logo/logo.svg
-  logo_image_invert_mobile: assets/images/logo/logo.svg
+  logo_image: assets/images/logo/logo.png
+  logo_image_mobile: assets/images/logo/logo-mobile.png
+  logo_image_invert: assets/images/logo/logo.png
+  logo_image_invert_mobile: assets/images/logo/logo-mobile.png
   logo_image_desktop_height: "60px"
-  logo_image_desktop_width: "264px"
+  logo_image_desktop_width: "508px"
   logo_image_mobile_height: "60px"
-  logo_image_mobile_width: "64px"
+  logo_image_mobile_width: "80px"
   show_logo_image_on_mobile: true
   show_logo_image_on_desktop: true
   show_logo_text_on_mobile: false
@@ -189,7 +189,7 @@ menu:
 footer:
   enable_footer: true # show/hide the entire footer
   footer_title: "The Hyperlabs"
-  footer_description: "Advance is a multi-purpose premium Jekyll theme. Modern design, clean code and highly configurable."
+  footer_description: "Those who build, sculpt the currency of the future.<br/>Join us."
   enable_social_media_icons: true
   enable_contact_details: true
   enable_menu_footer_primary: true
