--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,6 +2,22 @@ main:
   - name: Home
     url: /
     weight: 1
+  - name: Services
+    url: /services/
+    weight: 1
+    child:
+      - name: "Web Development"
+        url: /services/web-development/
+      - name: "UX"
+        url: /services/user-experience/
+      - name: "Branding"
+        url: /services/branding/
+      - name: "Web Design"
+        url: /services/web-design/
+      - name: "SEO"
+        url: /services/seo/
+      - name: "Software Engineering"
+        url: /services/software-engineering/
   - name: Projects
     url: /projects/
     weight: 2
