--- a/_config.yml
+++ b/_config.yml
@@ -189,7 +189,7 @@ menu:
 footer:
   enable_footer: true # show/hide the entire footer
   footer_title: "The Hyperlabs"
-  footer_description: "Those who build, sculpt the currency of the future.<br/>Join us."
+  footer_description: "Those who build on Bitcoin, sculpt the currency of the future.<br/>Join us."
   enable_social_media_icons: true
   enable_contact_details: true
   enable_menu_footer_primary: true
