--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ newsletter:
 contact_form: 
   use_netlify_form: true
   use_formspree_form: false
-  formspree_endpoint: https://formspree.io/f/moqyklqv
+  formspree_endpoint: https://formspree.io/f/mgejgykw
   netlify_form_name: "contact"
 
 menu: 
@@ -190,11 +190,11 @@ footer:
   enable_footer: true # show/hide the entire footer
   footer_title: "The Hyperlabs"
   footer_description: "Those who build on Bitcoin, sculpt the currency of the future.<br/>Join us."
-  enable_social_media_icons: true
+  enable_social_media_icons: false
   enable_contact_details: true
-  enable_menu_footer_primary: true
-  enable_menu_footer_secondary: true
-  enable_menu_footer_tertiary: true
+  enable_menu_footer_primary: false
+  enable_menu_footer_secondary: false
+  enable_menu_footer_tertiary: false
   footer_primary_menu_title: "Product"
   footer_secondary_menu_title: "Company"
   footer_tertiary_menu_title: "Other"
