--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -33,9 +33,9 @@ main:
   - name: About
     url: /about/
     weight: 5
-  - name: "Team"
-    url: /team/
-    weight: 6
+#  - name: "Team"
+#    url: /team/
+#    weight: 6
   - name: "Contact"
     url: /contact/
     weight: 7
@@ -53,9 +53,9 @@ footer_secondary:
   - name: About
     url: /about/
     weight: 2
-  - name: Team
-    url: /team/
-    weight: 3
+#  - name: Team
+#    url: /team/
+#    weight: 3
   - name: Contact
     url: /contact/
     weight: 4
