Added map animation

--- a/_config.yml
+++ b/_config.yml
@@ -89,26 +89,26 @@ category_dir: category
 
 colors:
   #light-mode colors
-  primary_bg: "#2D4059"
+  primary_bg: "#320D6D"
   primary_bg_2: "#CCCCCC"
-  primary_bg_3: "#FF5722"
+  primary_bg_3: "#F17300"
   primary_text: "#222831"
   base_bg: "#CCCCCC"
-  base_bg_2: "#EEEEEE"
-  base_bg_3: "#FF5722"
-  text: "#2D4059"
-  text_2: "#2D4059"
+  base_bg_2: "#320D6D"
+  base_bg_3: "#F17300"
+  text: "#320D6D"
+  text_2: "#320D6D"
   logo_text: "#EEEEEE"
   header_text: "#EEEEEE"
 
   # dark-mode colors
   primary_bg_dark: "#EEEEEE"
-  primary_bg_2_dark: "#2D4059"
-  primary_bg_3_dark: "#FF5722"
+  primary_bg_2_dark: "#320D6D"
+  primary_bg_3_dark: "#F17300"
   primary_text_dark: "#222831"
   base_bg_dark: "#222831"
-  base_bg_2_dark: "#2D4059"
-  base_bg_3_dark: "#FF5722"
+  base_bg_2_dark: "#320D6D"
+  base_bg_3_dark: "#F17300"
   text_dark: "#EEEEEE"
   text_2_dark: "#EEEEEE"
   logo_text_dark: "#EEEEEE"
@@ -117,12 +117,12 @@ colors:
 
 fonts:
   use_google_fonts: false
-  google_fonts_url: "https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Source+Code+Pro&family=Source+Sans+3:wght@300;400;700&display=swap"
+  #google_fonts_url: "https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Source+Code+Pro&family=Source+Sans+3:wght@300;400;700&display=swap"
   use_self_hosted_fonts: true # font files must be placed in /assets/fonts folder and the @font-face definitions must be added to /assets/css/fonts.css
-  heading: "Lato"
-  base: "'Source Sans 3'"
+  heading: "Manrope"
+  base: "'Manrope'"
   monospace: "'Source Code Pro'"
-  logo: "Lato"
+  logo: "Manrope"
 
 logo:
   logo_text: "The Hyperlabs"
@@ -130,8 +130,8 @@ logo:
   logo_image_mobile: assets/images/logo/logo-mobile.png
   logo_image_invert: assets/images/logo/logo.png
   logo_image_invert_mobile: assets/images/logo/logo-mobile.png
-  logo_image_desktop_height: "60px"
-  logo_image_desktop_width: "508px"
+  logo_image_desktop_height: "auto"
+  logo_image_desktop_width: "300px"
   logo_image_mobile_height: "60px"
   logo_image_mobile_width: "80px"
   show_logo_image_on_mobile: true
